@@ -58,23 +58,22 @@ public class DxUtil {
                 1.2f, //dWORLDSTEP_RESERVEFACTOR_DEFAULT, 
                 65536);// dWORLDSTEP_RESERVESIZE_DEFAULT);
 
-    
-    static final int sizeof(Class<?> cls) {
-        if (cls == DxWorldProcessMemArena.class) {
-            return -1;
-        }
-        return -1;
-    }
-    
-    public static final int sizeof(Object o) {
-        if (o instanceof Class) {
-            return sizeof((Class<?>)o);
-        }
-        return sizeof(o.getClass());
-    }
-    
+
+    /* the efficient alignment. most platforms align data structures to some
+     * number of bytes, but this is not always the most efficient alignment.
+     * for example, many x86 compilers align to 4 bytes, but on a pentium it
+     * is important to align doubles to 8 byte boundaries (for speed), and
+     * the 4 floats in a SIMD register to 16 byte boundaries. many other
+     * platforms have similar behavior. setting a larger alignment can waste
+     * a (very) small amount of memory. NOTE: this number must be a power of
+     * two. this is set to 16 by default.
+     */
     public static final int EFFICIENT_ALIGNMENT = 16;
-    
+
+    /* ********************************************************************************************************* */
+    /* ************************* TZ: This has been move here from Common because it is mostly required here **** */
+    /* ********************************************************************************************************* */
+
 //  #define dEFFICIENT_SIZE(x) (((x)+(EFFICIENT_ALIGNMENT-1)) & ~((size_t)(EFFICIENT_ALIGNMENT-1)))
     static final int dEFFICIENT_SIZE(int x) {
         return x;
